# langgraph_deepresearcher

./: .dockerignore  .env.example  .gitignore  API_README.md  CLAUDE.md  Dockerfile  GRADIO_QUICKSTART.md  README.md  docker-compose.yml  fly.toml  langgraph.json  main.py  pyproject.toml  run_api.py  run_gradio.py  test_interception.py
api/: config.py  main.py
front/: README.md  TROUBLESHOOTING.md  __init__.py  deep_researcher_wrapper.py  event_tracker.py  gradio_app.py  message_interceptor.py
gradio_documentation/: guides_fastapi-app-with-the-gradio-client.md  guides_gradio-and-llm-agents.md  guides_querying-gradio-apps-with-curl.md  main_guides_agents-and-tool-usage.md  main_guides_alerts.md  main_guides_automatic-voice-detection.md  main_guides_backend.md  main_guides_batch-functions.md  main_guides_blocks-and-event-listeners.md  main_guides_chatbot-specific-events.md  main_guides_chatinterface-examples.md  main_guides_client-side-functions.md  main_guides_configuration.md  main_guides_connecting-to-a-database.md  main_guides_controlling-layout.md  main_guides_conversational-chatbot.md  main_guides_creating-a-chatbot-fast.md  main_guides_creating-a-custom-chatbot-with-blocks.md  main_guides_creating-a-discord-bot-from-a-gradio-app.md  main_guides_creating-a-slack-bot-from-a-gradio-app.md  main_guides_creating-a-website-widget-from-a-gradio-chatbot.md  main_guides_creating-plots.md  main_guides_custom-CSS-and-JS.md  main_guides_custom-components-in-five-minutes.md  main_guides_documenting-custom-components.md  main_guides_dynamic-apps-with-render-decorator.md  main_guides_environment-variables.md  main_guides_file-access.md  main_guides_filters-tables-and-stats.md  main_guides_flagging.md  main_guides_four-kinds-of-interfaces.md  main_guides_frequently-asked-questions.md  main_guides_frontend.md  main_guides_getting-started-with-the-js-client.md  main_guides_getting-started-with-the-python-client.md  main_guides_interface-state.md  main_guides_internationalization.md  main_guides_key-component-concepts.md  main_guides_more-blocks-features.md  main_guides_more-on-examples.md  (+21 more)
src/: README.md  debug.py  langgraph_deepresearch.ipynb  langgraph_deepresearch.py  (+1 more)
(+94 files in other folders)
