[project]
name = "langgraph-deepresearcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alive-progress>=3.3.0",
    "dotenv>=0.9.9",
    "grandalf>=0.8",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.21",
    "langchain-community>=0.3.29",
    "langchain-mcp-adapters>=0.1.11",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "rich>=14.1.0",
    "tavily-python>=0.7.12",
]
