[project]
name = "langgraph-deepresearcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alive-progress>=3.3.0",
    "deepagents-cli>=0.0.8",
    "dotenv>=0.9.9",
    "gradio>=5.49.1",
    "grandalf>=0.8",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.21",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=3.2.0",
    "langchain-google-vertexai>=3.1.0",
    "langchain-mcp-adapters>=0.1.11",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "rich>=14.1.0",
    "tavily-python>=0.7.12",
    # API dependencies
    "aiosqlite>=0.19.0",
    "fastapi>=0.110.0",
    "greenlet>=3.0.0",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
]
